// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the appeal type page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What type should this appeal be?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="appealType" name="appealType" type="radio"
                                value="75">
                                <label class="govuk-label govuk-radios__label" for="appealType">(A) Planning appeal</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="appealType-2" name="appealType"
                                type="radio" value="76">
                                <label class="govuk-label govuk-radios__label" for="appealType-2">(C) Enforcement notice appeal</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/change-appeal-final-date should render the final date page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What is the final date the appellant must resubmit by?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                        <div id="change-appeal-final-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                        <div class="govuk-date-input" id="change-appeal-final-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                    inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                    type="text" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                    type="text" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/resubmit should render the resubmit page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Should the appellant be asked to resubmit this appeal?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="appealResubmit" name="appealResubmit"
                                type="radio" value="true">
                                <label class="govuk-label govuk-radios__label" for="appealResubmit">Yes</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="appealResubmit-2" name="appealResubmit"
                                type="radio" value="false" checked>
                                <label class="govuk-label govuk-radios__label" for="appealResubmit-2">No</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/appeal-type should re-render the appeal type page with an error message if required field is missing 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appealType">Please choose an appeal type</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What type should this appeal be?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="appealType" name="appealType" type="radio"
                                value="75">
                                <label class="govuk-label govuk-radios__label" for="appealType">(A) Planning appeal</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="appealType-2" name="appealType"
                                type="radio" value="76">
                                <label class="govuk-label govuk-radios__label" for="appealType-2">(C) Enforcement notice appeal</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/confirm-resubmit should re-render the confirm page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-width-container">
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds">
                <div class="govuk-panel govuk-panel--confirmation">
                    <h1 class="govuk-panel__title"> Appeal closed</h1>
                    <div class="govuk-panel__body">Appeal reference
                        <br><strong>351062</strong>
                    </div>
                </div>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds govuk-!-padding-top-2">
                <p class="govuk-body">The appellant has been emailled to ask them to resubmit their appeal with
                    the correct type.</p>
                <p class="govuk-body">You can go <a href="/appeals-service/appeals-list" class="govuk-link">back to your list</a> or
                    <a                     href="/appeals-service/appeal-details/1" class="govuk-link">view the closed case</a>.</p>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/resubmit should re-render the resubmit page with an error message if required field is missing 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appealResubmit">Please specify if the appeal should be resubmitted</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Should the appellant be asked to resubmit this appeal?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="appealResubmit" name="appealResubmit"
                                type="radio" value="true">
                                <label class="govuk-label govuk-radios__label" for="appealResubmit">Yes</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="appealResubmit-2" name="appealResubmit"
                                type="radio" value="false" checked>
                                <label class="govuk-label govuk-radios__label" for="appealResubmit-2">No</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if an invalid date was provided 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#">Final date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What is the final date the appellant must resubmit by?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                        <div id="change-appeal-final-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                        <div class="govuk-date-input" id="change-appeal-final-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                    value="29" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                    type="text" value="2" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                    type="text" value="3000" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if required field is missing 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-day">Final date day cannot be empty</a>
                            </li>
                            <li><a href="#change-appeal-final-date-month">Final date month cannot be empty</a>
                            </li>
                            <li><a href="#change-appeal-final-date-year">Final date year cannot be empty</a>
                            </li>
                            <li><a href="#">Final date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What is the final date the appellant must resubmit by?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                        <div id="change-appeal-final-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                        <div class="govuk-date-input" id="change-appeal-final-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                    inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                    type="text" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                    type="text" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if the provided date day is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-day">Final date day must be between 1 and 31</a>
                            </li>
                            <li><a href="#">Final date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What is the final date the appellant must resubmit by?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                        <div id="change-appeal-final-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                        <div class="govuk-date-input" id="change-appeal-final-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                    value="0" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                    type="text" value="11" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                    type="text" value="2024" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if the provided date is not a business day 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#">Date must be a business day</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What is the final date the appellant must resubmit by?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                        <div id="change-appeal-final-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                        <div class="govuk-date-input" id="change-appeal-final-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                    value="1" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                    type="text" value="1" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                    type="text" value="3000" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if the provided date is not in the past 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#">Final date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What is the final date the appellant must resubmit by?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                        <div id="change-appeal-final-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                        <div class="govuk-date-input" id="change-appeal-final-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                    value="29" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                    type="text" value="2" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                    type="text" value="2023" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if the provided date month is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-month">Final date month must be between 1 and 12</a>
                            </li>
                            <li><a href="#">Final date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What is the final date the appellant must resubmit by?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                        <div id="change-appeal-final-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                        <div class="govuk-date-input" id="change-appeal-final-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                    value="1" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                    type="text" value="0" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                    type="text" value="2024" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if the provided date year is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-year">Final date year must be a number</a>
                            </li>
                            <li><a href="#">Final date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What is the final date the appellant must resubmit by?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                        <div id="change-appeal-final-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                        <div class="govuk-date-input" id="change-appeal-final-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                    value="11" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                    type="text" value="11" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                    type="text" value="x" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
